feat: criação de clinica junto com restTemplate para consultar api de cep

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/Viagem
+api.cep.url=https://viacep.com.br/ws/
 spring.devtools.restart.enabled=true
